--- a/ayush/index.html
+++ b/ayush/index.html
@@ -148,9 +148,9 @@
                                     required min="1000">
                             </div>
                             <div class="form-group half-width">
-                                <label for="soilPh" data-translate="soil_ph">Soil pH Level</label>
+                                <label for="soilPh" data-translate="soil_ph">Soil pH Level <span style="font-size: 0.8em; color: #999; font-weight: normal;">(Optional)</span></label>
                                 <input type="number" id="soilPh" name="soilPh" placeholder="6.5" step="0.1" min="4"
-                                    max="9" required>
+                                    max="9">
                             </div>
                         </div>
 
@@ -179,6 +179,8 @@
 
 
     <!-- Modular Scripts -->
+    <script src="./api-service.js"></script>
+    <script src="./weather-config.js"></script>
     <script src="./data.js"></script>
     <script src="./app.js"></script>
 </body>
